Primer push del capitulo de Geoprocesamiento

--- a/04-geoprocesamiento.Rmd
+++ b/04-geoprocesamiento.Rmd
@@ -1,6 +1,8 @@
 # Geoprocesamiento
 
-ESCRIBIR INTRO
+Cuando tenemos información geográfica y queremos manipularla para generar nuevos datos que nos permitan hacer análisis espaciales, debemos utilizar diferentes herramientas de geoprocesamiento, las cuales son indispensables para la analítica urbana.
+
+Los geoprocesos, que se realizan entre dos o más capas (shapes), pueden ser: unir, recortar, disolver, borrar, fusionar, interseccionar, calcular áreas de influencia (buffer), entre otros. En este capítulo aprenderemos a utilizar las herramientas para geoprocesamiento de datos geográficos incluidas en el paquete `sf`.
 
 ## Cruces espaciales 
 
@@ -113,7 +115,57 @@ ggplot() +
 
 ### Coropletas
 
-Explicar como usar los conteos de puntos por polígono para mapear en coropletas
+Hasta acá obtuvimos un dataframe espacial con la geometría de puntos proveniente de los datos de Airbnb y generamos una nueva columna que indica a que Comuna pertenece cada registro. Sin embargo, cuando tenemos muchos puntos concentrados en un mapa resulta difícil realizar un análisis visual que nos permita sacar conclusiones de los mismos. Para solucionar esto, sirven los mapas coropléticos, que muestran áreas geográficas (polígonos) coloreadas según alguna de las variables incluidas en el dataset.
+
+Entonces, ¿Cómo podemos hacer un mapa coroplético dándole color a las Comunas según la cantidad de propiedades que se alquilan en cada una? Veamos esto en detalle:
+Lo primero que debemos hacer es filtrar solo las propiedades que se ubican dentro de CABA y agruparlas por Comuna realizando un conteo de las observaciones que contienen.
+
+```{r}
+airbnb_con_comunas <- airbnb_con_comunas %>%
+  filter(!is.na(comunas)) %>%
+  group_by(comunas) %>%
+  summarise(cantidad=n()) %>%
+  st_set_geometry(NULL)
+```
+
+Luego debemos hacer un `left_join()` entre el shape con los polígonos de las Comunas y los datos que agrupamos:
+
+```{r}
+airbnb_con_comunas <- comunas %>%
+  left_join(airbnb_con_comunas,
+   by="comunas") 
+```
+
+Y ahora sí, ya estamos en condiciones de hacer nuestro primer mapa coroplético a partir de la unión de datos espaciales y no espaciales:
+
+```{r}
+ggplot() +
+  geom_sf(data = airbnb_con_comunas, aes(fill=cantidad), color="gray80") +
+    labs(title = "Airbnb por Comuna",
+         subtitle = "Propiedades publicadas",
+         fill = "Cantidad",
+         caption= "Fuente: Airbnb 2017") +
+  scale_fill_gradient(low="lightgoldenrodyellow", high="deeppink4") +
+  theme_light()
+```
+
+Tal como se ve en el mapa, la Comuna 14 donde se encuentra solo el barrio de Palermo es la que más cantidad de propiedades tiene publicadas en Airbnb. Esto tiene sentido ya que Airbnb es un servicio orientado a turistas y Palermo es uno de los barrios donde más cantidad de atracciones turísticas hay.
+
+Sin embargo, para que estos datos sean comparables entre las 15 Comunas, lo correcto sería dividir la cantidad de observaciones por la superficie (ha) de cada una.
+
+```{r}
+ggplot() +
+  geom_sf(data = airbnb_con_comunas, aes(fill=(cantidad/area)*10000), color="gray80") +
+    labs(title = "Airbnb por Comuna",
+         subtitle = "Densidad de propiedades publicadas",
+         fill = "Cantidad por ha",
+         caption= "Fuente: Airbnb 2017") +
+  scale_fill_gradient(low="lightgoldenrodyellow", high="deeppink4") +
+  theme_light()
+```
+
+Aquí pudimos ver que los resultados son similares a los del mapa anterior y el corredor norte de la Ciudad sigue siendo la zona con mayor cantidad de observaciones, pero si tenemos en cuenta la superficie total de las Comunas, Recoleta pasa a ser el barrio que más densidad de propiedades publicadas en Airbnb tiene.
+
 
 ## Uniones
 
