--- a/07-machine_learning.Rmd
+++ b/07-machine_learning.Rmd
@@ -1,144 +1,198 @@
 # Machine Learning (en una aplicación urbana)
 
 
-El asíi llamado _machine learning_ consiste el empleo de aprendizaje estadístico automatizado para identificar patrones en grandes volúmenes de datos. El machine learning (de aquí en más ML) es utilizado en infinidad de campos debido a su creciente facilidad de uso y capacidad -en ciertos contextos- para predecir resultados con alta precisión.
+El así llamado _machine learning_ consiste el empleo de aprendizaje estadístico automatizado para identificar patrones en grandes volúmenes de datos. El machine learning (de aquí en más ML) es utilizado en infinidad de campos debido a su creciente facilidad de uso y capacidad -en ciertos contextos- para predecir resultados con alta precisión.
 
-Veremos como se aplica en la práctica con un ejercicio adaptado del [tutorial realizado por Cam Nugent](https://www.kaggle.com/camnugent/introduction-to-machine-learning-in-r-tutorial). Utiliza como fuente datos un [dataset](https://www.kaggle.com/camnugent/california-housing-prices/version/1) que contiene el valor mediano de las viviendas en California, EEUU, de acuerdo a un censo de 1990. ¡Es casi información arqueológica!
+A continuación veremos como se aplica ML para predecir el valor de venta de los departamentos en CABA a partir de un dataset publicado en el portal de datos abiertos [BA Data](https://data.buenosaires.gob.ar/) que contiene el relevamiento de departamentos en venta que realizó el GCBA en 2016.
 
-![](https://bitsandbricks.github.io/ciencia_de_datos_gente_sociable/imagenes/90210.jpg)
-
-_Habitantes de California en los '90 con sus vestimentas nativas_
-
-
-A pesar de no contener datos de factura reciente, el dataset ha aparecido en varios textos introductorios debido a que no contiene información sensible, es de dominio público, y sus variables son auto-explicativas. Además, su tamaño resulta adecuado: suficiente para no ser considerado "de juguete", pero no tan grande como para ser engorroso.
-
-Cada fila representa un conjunto de manzanas, o "Census block groups". Por comodidad, nosotros les llamaremos distritos. El objetivo del ejercicio es predecir el valor medio de las viviendas de cada distrito en función de sus otros atributos conocidos: cuánta gente vive allí, donde esta localizado, si queda cerca del mar, la antigüedad de sus casas, etc. 
+El objetivo del ejercicio es predecir el valor del metro cuadrado (USD x m2) de los departamentos en función de atributos como la cantidad de m2 descubiertos, la cantidad de ambientes, el barrio donde se ubican, la antiguedad de la construcción, etc. 
 
 Allá vamos.
 
 ## Paso 0: Cargar paquetes
 
-Además de las funciones de R "base", vamos a usar las del paquete `tidyverse` para procesar y visualizar nuestros datos, y las de `randomForest`, para aplicar el algoritmo de ML homónimo, que es relativamente simple y a la vez efectivo. 
+Además de las funciones de R "base", vamos a usar las del paquete `tidyverse` para procesar y visualizar nuestros datos, las de `sf` para hacer algunos análisis espaciales y las de `randomForest`, para aplicar el algoritmo de ML homónimo, que es relativamente simple y a la vez efectivo. 
 
 ```{r}
-#install.packages("tidyverse")
 library(tidyverse)
+library(sf)
 #install.packages("randomForest")
 library(randomForest)
 ```
 
-
 ## Paso 1: Cargar los datos
 
-
-Descargamos el dataset del siguiente modo:
+Descargamos de BA Data el dataset del relevamiento de departamentos en venta del siguiente modo:
 
 ```{r}
-vivienda <- read_csv("http://bitsandbricks.github.io/data/housing.csv")
+dptos_2016 <- read.csv("http://cdn.buenosaires.gob.ar/datosabiertos/datasets/departamentos-en-venta/departamentos-en-venta-2016.csv",
+                       encoding="UTF-8",
+                       sep=";")
 ```
-
 
 ## Paso 2: Examinar los datos
 
-Echamos un vistazo a las primeras filas,
+Echamos un vistazo a los nombres de las columnas y las primeras filas del dataset:
 
 ```{r}
-head(vivienda)
+names(dptos_2016)
 ```
 
-Y extraemos un resumen del contenido
-
 ```{r}
-summary(vivienda)
+head(dptos_2016)
 ```
 
-Obsérvese que la variable "total_dormitorios" exhibe 207 datos faltantes, representados con `NA`. Luego volveremos a éste tema.
+El dataset contiene 29 columnas (mucha información!). Por lo tanto, debemos revisar las variables y hacer una preselección para incluir solo aquellas que consideremos relevantes para nuestro modelo:
 
-Y espiemos la distribución de algunas variables, como
-
-ingresos:
+- La variable a predecir (dependiente) será el valor del m2 de los departamentos (U_S_M2) en CABA.
+- Las variables predictoras (independientes) serán: cantidad de ambientes (AMBIENTES), años de antiguedad de la construcción (ANTIGUEDAD), cantidad de baños (BAÑOS), superficie total (M2), superficie cubierta (M2CUB), barrio al que pertenece (BARRIO) y coordenadas (LATITUD, LONGITUD).
 
 ```{r}
-ggplot() +
-    geom_histogram(data = vivienda, aes(x = mediana_ingresos))
+dptos_2016 <- dptos_2016 %>%
+  select(-CALLE, -NUMERO, -ID_ZONAPRO, -OPERACION, -TIPO, -PRECIOTEXT, -PRECIOARS, -PRECIOARSM, -DOLARES, -DIRECCION, -LOCATION, -PUBLICADO, -PROCESADO, -URL, -REVISION, -NOTA, -DIRECCION_NORMALIZADA, -COMUNA, -CODIGO_POSTAL, -CODIGO_POSTAL_ARGENTINO)
 ```
 
-antigüedad de las viviendas:
+Ahora veamos un resumen del contenido:
 
 ```{r}
-ggplot() +
-    geom_histogram(data = vivienda, aes(x = mediana_antiguedad_viviendas))
-```
-
-población:
-
-```{r}
-ggplot() +
-    geom_histogram(data = vivienda, aes(x = poblacion))
-```
-
-... o proximidad al océano (dado que se trata de una variable categórica en lugar de continua, usamos un gráfico de barras en lugar de un histograma):
-
-```{r}
-ggplot() +
-    geom_bar(data = vivienda, aes(x = proximidad_oceano))
+summary(dptos_2016)
 ```
 
 ## Paso 3: Limpiar los datos
-
 
 ### Imputar valores faltantes
 
 Es habitual que los algoritmos empleados para ML no acepten datos faltantes. Es por eso que la limpieza básica de un dataset casi siempre incluye la imputación de datos no disponibles, evitando descartar por incompletas filas que contienen información valiosa en sus campos si disponibles.
 
-Habíamos notado que la variable "total_dormitorios" tiene faltantes en 207 filas. Para esos casos, usaremos una de las técnicas de imputación mas _naif_ que hay: donde haya un valor desconocido, lo reemplazaremos por la mediana de los valores generales. 
+Hasta acá pudimos observar varias inconsistencias en los datos como por ejemplo:
+
+- La variable M2CUB tiene valor 0 en algunos registros. Suponiendo que hubo un error en la carga de los datos, cuando M2CUB<15 vamos a imputar el valor de M2, asumiendo que esa propiedad no tiene m2 descubiertos.
+- Hay casos donde M2CUB>M2. Acá le imputaremos el valor del M2CUB al M2.
+- En la variable ANTIGUEDAD aparecen algunos registros con el valor 2016. Suponiendo que esas propiedades se construyeron en ese año, se imputará una antiguedad 0 ya que se fue en el mismo año del relevamiento.
+- Las variables AMBIENTES y BAÑOS tiene 0 en algunos registros. Imputaremos estos datos entendiendo que cuando AMBIENTES=0, es un monoambiente, y que cuando BAÑOS=0, es porque tienen 1 solo.
+- Hay 1382 valores faltantes en las columnas LONGITUD y LATITUD, y a su vez estos registros tampoco tienen comuna o barrio asignado, por lo tanto como nos va a resultar imposible ubicarlos en el espacio, debemos eliminarlos.
+- Por último, se puede ver que la variable a predecir (U_S_M2) varía entre 0 y 12500. Claramente ninguna propiedad puede tener un U_S_M2=0 o menos de 500 así que estos registros se filtrarán ya que son pocos casos.
 
 ```{r}
-vivienda <- vivienda %>% 
-    mutate(total_dormitorios = ifelse(is.na(total_dormitorios),
-                                       median(total_dormitorios, na.rm = TRUE),
-                                       total_dormitorios))
-    
-summary(vivienda)
+dptos_2016 <- dptos_2016 %>%
+  mutate(M2CUB=ifelse(M2CUB<15, M2, M2CUB),
+         M2=ifelse(M2CUB>M2, M2CUB, M2),
+         ANTIGUEDAD=ifelse(ANTIGUEDAD==2016, 0, ANTIGUEDAD),
+         BAÑOS = ifelse(BAÑOS==0, 1, BAÑOS),
+         AMBIENTES = ifelse(AMBIENTES==0, 1, AMBIENTES)) %>%
+  filter(U_S_M2>500,
+         !is.na(LATITUD), !is.na(LONGITUD))
 ```
 
-Nos hemos librado de los `NA`.
-
-
-### Normalizar variables
-
-También deberíamos evaluar si algunas variables requieren ser normalizadas. En este caso las candidatas son "total_habitaciones" y "total_dormitorios", ya que es de esperarse que sean mayores donde hay más casas -naturalmente- pero eso no nos indica si las casas tienden a ser más o menos grandes que la media. Lo que haremos entonces es dividir la cantidad total de habitaciones por la cantidad de viviendas en cada distrito, y nos quedaremos con esas métricas en lugar de las originales:
+Ya tenemos preparadas las variables para nuestro modelo, pero aún estamos a tiempo de generar algunas nuevas que consideremos que lo mejorarían por tener capacidad predictiva sobre el valor del m2.
+Por ejemplo, probemos calculando los metros descubiertos (M2DESC) de cada propiedad, ya que, es muy probable que tener alguna expansión (balcón o terraza) le de un valor agregado al departamento.
 
 ```{r}
-vivienda <- vivienda %>% 
-    mutate(promedio_habitaciones = total_habitaciones/hogares,
-           promedio_dormitorios = total_dormitorios/hogares) %>%
-    select(-total_habitaciones, -total_dormitorios)
-
-head(vivienda)
+dptos_2016 <- dptos_2016 %>%
+  mutate(M2DESC=M2-M2CUB)
 ```
 
-Del mismo modo sería mejor tener densidad de población en lugar de población total, pero sin saber el área que ocupa cada distrito no vamos a poder obtener la densidad. 
+Ahora sí, volvamos a ver el resumen:
+
+```{r}
+summary(dptos_2016)
+```
+
+Nos hemos librado de los `NA` y las inconsistencias que tenían los datos.
+
+Y espiemos la distribución de algunas variables, como el valor del m2:
+
+```{r}
+ggplot() +
+    geom_histogram(data = dptos_2016, aes(x = U_S_M2))
+```
+
+La superficie total:
+
+```{r}
+ggplot() +
+    geom_histogram(data = dptos_2016, aes(x = M2))
+```
+
+La superficie descubierta:
+
+```{r}
+ggplot() +
+    geom_histogram(data = dptos_2016, aes(x = M2DESC))
+```
+
+La antigüedad de las viviendas:
+
+```{r}
+ggplot() +
+    geom_histogram(data = dptos_2016, aes(x = ANTIGUEDAD))
+```
+
+El Barrio (dado que se trata de una variable categórica en lugar de continua, usamos un gráfico de barras en lugar de un histograma):
+
+```{r}
+ggplot() +
+  geom_bar(data = dptos_2016, aes(x = BARRIO))
+```
+
+Agreguemos una variable más: la distancia de los departamenteos a las estaciones de subte, ya que la cercanía a estas es muy probable que impacte en el valor del m2.
+Acá utilizaremos uno de los geoprocesos que aprendimos algunos capítulos atrás: `st_distance`
+
+```{r}
+subte_estaciones <- st_read("http://bitsandbricks.github.io/data/subte_estaciones.geojson")
+```
+
+Transformemos dptos_2016 a un dataset espacial para poder medir distancias:
+
+```{r}
+dptos_2016 <- dptos_2016 %>% 
+    st_as_sf(coords = c("LONGITUD", "LATITUD"), crs = 4326)
+```
+
+Y ahora calculemos la distancia (en metros) entre cada departamento en venta y la estación de subte más cercana:
+
+```{r}
+dptos_2016 <- dptos_2016 %>%
+mutate(DIST_SUBTE = apply(st_distance(dptos_2016, subte_estaciones), 1, function(x) min(x)))
+```
+
+Veamos un resumen de los resultados:
+
+```{r}
+summary(dptos_2016$DIST_SUBTE)
+```
+
+El departamento ubicado a menor distancia de alguna estación de subte es a 1.35 metros y el que está a mayor distancia es a 5658 metros. Sin embargo, en promedio, las propiedades se ubican a 706 metros de alguna estación.
+
+Nuestro dataset lo transformamos en espacial para medir distancias, pero como queremos utilizar LATITUD y LONGITUD para el modelo, debemos volver a separar las coordenadas y transformarlo en dataframe tradicional:
+
+```{r}
+dptos_2016 <- dptos_2016 %>%
+  mutate(LATITUD = unlist(map(dptos_2016$geometry,1)),
+  LONGITUD = unlist(map(dptos_2016$geometry,2))) %>%
+  st_set_geometry(NULL)
+```
 
 
 ### Codificar variables categóricas
 
-Ahora nos encargaremos de las variables categóricas, aquí representadas por "proximidad_oceano". Rara vez es posible utilizar columnas categóricas en modelos estadísticos, pero por suerte podemos recurrir a la alternativa de reemplazar una columna de datos categóricos por una serie de variables binarias, o "dummy". 
+Rara vez es posible utilizar columnas categóricas en modelos estadísticos, pero por suerte podemos recurrir a la alternativa de reemplazar una columna de datos categóricos por una serie de variables binarias, o "dummy".
+En nuestro dataset solo tenemos una variable categórica: BARRIO.
 
-Es decir, en lugar de...
+Entonces, en lugar de...
 
 
-| caso | proximidad_oceano  |
+| dpto | BARRIO             |
 |------|--------------------|
-| A    | CERCANO A BAHIA    |
-| B    | ALEJADO DEL OCEANO |
-| C    | CERCANO A OCEANO   |
+| A    | PALERMO            |
+| B    | BELGRANO           |
+| C    | SAN TELMO          |
 
 
-... tendríamos algo así como:
+... deberíamo tener algo así como:
 
 
-| caso | CERCANO A BAHIA | ALEJADO DEL OCEANO | ALEJADO DEL OCEANO |
+| caso | PALERMO         | BELGRANO           | SAN TELMO          |
 |------|-----------------|--------------------|--------------------|
 | A    | 1               | 0                  | 0                  |
 | B    | 0               | 1                  | 0                  |
@@ -148,86 +202,77 @@ Es decir, en lugar de...
 
 Como buen lenguaje creado por y para practicantes del análisis estadístico, `R` trae una función específica para realizar ésta tarea, `model.matrix()`. Se usa así:
 
-
 ```{r}
-matriz_categorias_oceano <- model.matrix(data = vivienda, ~ proximidad_oceano - 1)
+dptos_2016 <- dptos_2016 %>%
+  mutate(BARRIO=str_replace_all(BARRIO, " ", "_"))
+matriz_categorias_barrios <- model.matrix(data = dptos_2016, ~ BARRIO - 1)
 ```
 
 y el resultado es, ni más ni menos, una matriz de variables binarias que representan las categorías originales:
 
 ```{r}
-head(matriz_categorias_oceano)
+head(matriz_categorias_barrios)
 ```
 
 Pronto agregaremos la matriz a nuestro dataframe, pero antes terminemos con otros ajustes pendientes.
 
 ### Unificar la escala de las variables numéricas
 
-Éste paso siempre es necesario cuando estamos trabajando con variables que utilizan distintas unidades de medida. Aquí tenemos personas, hogares, habitaciones, dormitorios, años de antigüedad... de todo. Muchos algoritmos asumen que todas las variables tienen escalas comparables, lo cual genera problemas con las que alcanzan valores relativamente muy altos (como población, que llegar a decenas de miles) versus las que tienen rangos mucho menores (como antigüedad en años mediana, que "sólo" llega a 52). Si las dejásemos así, varias de las técnicas habituales del ML adjudicarían mucho más peso a las variables con números grandes, "despreciando" a las que por su naturaleza se mueven en rango más reducidos.
+Éste paso siempre es necesario cuando estamos trabajando con variables que utilizan distintas unidades de medida. Aquí tenemos superficies, ambientes, años de antigüedad... de todo. Muchos algoritmos asumen que todas las variables tienen escalas comparables, lo cual genera problemas con las que alcanzan los valores más altos (como m2, que a 730) versus las que tienen rangos mucho menores (como cantidad de baños, que llega a 6). Si las dejásemos así, varias de las técnicas habituales del ML adjudicarían mucho más peso a las variables con números grandes, "despreciando" a las que por su naturaleza se mueven en rango más reducidos.
 
 En todo caso, no importa lo disimiles que sean las unidades de medida, la solución es simple: convertimos todas las variables a la famosa "distribución Z", o función de estandarización, que convierte variables a una escala sin unidad de medida, que expresa cada valor como la cantidad de desvíos estándar que lo alejan de la media. Expresar todas las variables numéricas en forma de "z scores", o "valores z", las hace directamente comparables entre sí. 
 
 En `R` disponemos de la función `scale()`, que obtiene los z-scores. Tomaremos entonces nuestro dataframe y usaremos `mutate_all()` para aplicar una función a todas las columnas restantes de un tirón. Eso si, quitando antes ciertas variables: las variables categóricas (que no tiene sentido pasar a z-scores porque no son variables numéricas), y la variable que estamos intentando predecir, ya que su escala no afecta los modelos y podemos dejarla en su formato original fácil de interpretar.
 
 ```{r}
-vivienda <- vivienda %>% 
-    select(-proximidad_oceano, -mediana_valor_vivienda) %>% 
+dptos_2016 <- dptos_2016 %>%
+    select(-BARRIO) %>% 
     mutate_all(funs(scale)) %>% 
-    mutate(mediana_valor_vivienda = vivienda$mediana_valor_vivienda)
-
+    mutate(U_S_M2 = dptos_2016$U_S_M2)
 ```
 
 Y obsérvese que `scale()` mediante, ahora todas las variables tienen promedio igual a 0, y se mueven en el mismo rango
 
-```{r}
-summary(vivienda)
-```
-
 ... y sin que esto haya cambiado la forma de las distribuciones. Compárense ahora con las que examinamos al inicio, 
 
-ingresos:
+La superficie total:
 
 ```{r}
 ggplot() +
-    geom_histogram(data = vivienda, aes(x = mediana_ingresos))
+    geom_histogram(data = dptos_2016, aes(x = M2))
 ```
 
-antigüedad de las viviendas:
+La superficie descubierta:
 
 ```{r}
 ggplot() +
-    geom_histogram(data = vivienda, aes(x = mediana_antiguedad_viviendas))
+    geom_histogram(data = dptos_2016, aes(x = M2DESC))
 ```
 
-población:
+La antigüedad de las viviendas:
 
 ```{r}
 ggplot() +
-    geom_histogram(data = vivienda, aes(x = poblacion))
+    geom_histogram(data = dptos_2016, aes(x = ANTIGUEDAD))
 ```
 
-¡las formas son iguales! no hemos hemos perdido "información" respecto a que tan típico o extremo es cada valor, y hemos ganado la posibilidad de comparar en forma directa todas las variables: si un distrito tiene un valor cercano a cero en población, y  -digamos- más de 4 en ingresos, sabemos automáticamente que su población es parecida a la media de todos los distritos, pero sus ingresos son altísimos.
+¡Las formas son iguales! no hemos hemos perdido "información" respecto a que tan típico o extremo es cada valor, y hemos ganado la posibilidad de comparar en forma directa todas las variables.
 
 
 ### Consolidar todas las variables generadas ad-hoc en un sólo dataframe 
 
-Nos ha quedado por un lado un dataframe de variables numéricas estandarizadas, y por otro una matriz que representa la pertenencia de cada distrito a su categoría respecto a "proximidad al océano". 
+Nos ha quedado por un lado un dataframe de variables numéricas estandarizadas, y por otro una matriz que representa la pertenencia de cada departamento a un barrio de la Ciudad. 
 
 Primero convertimos la matriz en dataframe (paso simple ya éstas estructura de datos son muy similares entre si), y luego unimos las columnas de ambos con la función `cbind()`:
 
 ```{r}
-matriz_categorias_oceano <- as.data.frame(matriz_categorias_oceano)
+matriz_categorias_barrios <- as.data.frame(matriz_categorias_barrios)
 
-vivienda <- vivienda %>% 
-    cbind(matriz_categorias_oceano)
-```
-
-```{r}
-head(vivienda)
+dptos_2016 <- dptos_2016 %>% 
+    cbind(matriz_categorias_barrios)
 ```
 
 Ya tenemos tenemos los datos limpios y en orden. 
-
 
 ## Paso 4: Crear sets de entrenamiento y de testeo
 
@@ -239,23 +284,22 @@ Definamos entonces cuales filas van al set de entrenamiento, y cuáles al de tes
 
 ```{r}
 #definimos a mano la "semilla" de aleatorización para obtener resultados reproducibles
-set.seed(1810)
+set.seed(1111)
 ```
 
-Tomamos al azar el 80% de las posiciones entre 1 y la cantidad total de filas de nuestro dataset
+Tomamos al azar el 80% de las posiciones entre 1 y la cantidad total de filas de nuestro dataset:
 
 ```{r}
-seleccion <- sample(1:nrow(vivienda), size = nrow(vivienda) * 0.8)
+seleccion <- sample(1:nrow(dptos_2016), size = nrow(dptos_2016) * 0.8)
 
-entrenamiento <- vivienda %>% 
+entrenamiento <- dptos_2016 %>% 
     filter(row_number() %in% seleccion)
 
 # el testeo es el set opuesto - aquellas filas cuya posición no está entre las seleccionadas
 # el operador ! convierte una proposición en negativa 
 
-testeo <- vivienda %>% 
+testeo <- dptos_2016 %>% 
     filter(!(row_number() %in% seleccion))
-
 ```
 
 Ahora si, por fin, apliquemos un poco de machine learning.
@@ -266,7 +310,7 @@ Ahora si, por fin, apliquemos un poco de machine learning.
 Random Forest, una implementación de árboles de decisión como los ilustrados en ["Una introducción visual al machine learning"](http://www.r2d3.us/una-introduccion-visual-al-machine-learning-1/):
 
 ```{r}
-modelo_RF <- randomForest(data = entrenamiento, mediana_valor_vivienda ~ .,
+modelo_RF <- randomForest(data = entrenamiento, U_S_M2 ~ .,
                          ntree = 500,
                          importance = TRUE)
 
@@ -276,8 +320,7 @@ modelo_RF <- randomForest(data = entrenamiento, mediana_valor_vivienda ~ .,
 modelo_RF
 ```
 
-Según dice allí, el modelo puede explicar más del 80% de la varianza de valores encontrada entre los distritos californianos en base a las variables predictoras que empleamos.
-
+Según dice allí, el modelo puede explicar casi el 80% de la varianza de valores encontrada entre los departamentos en venta en 2016 en base a las variables predictoras que empleamos.
 
 ¿Qué tiene dentro el modelo?
 
@@ -285,7 +328,7 @@ Según dice allí, el modelo puede explicar más del 80% de la varianza de valor
 summary(modelo_RF)
 ```
 
-De todo! Por ejemplo, "type" nos emite confirmar qué tipo de análisis realizó: Fue de regresión en este caso, peor podría haber sido otro, como clasificación (cuando se predice un atributo categórico en lugar de una variable continua):
+De todo! Por ejemplo, "type" nos emite confirmar qué tipo de análisis realizó: Fue de regresión en este caso, pero podría haber sido otro, como clasificación (cuando se predice un atributo categórico en lugar de una variable continua):
 
 ```{r}
 modelo_RF$type
@@ -297,17 +340,15 @@ O "importance", que contiene un ranking con la importancia relativa de cada pred
 modelo_RF$importance
 ```
 
-La columna "%IncMSE" representa el porcentaje de error promedio, la magnitud en la que el valor predicho por el modelo difiere del valor observado, cuando cada predictor se retira del modelo (es decir, cuanto peor sería la predicción si no se usara). Por eso los números mayores están asociados a los predictores de más peso, que en este caso son "mediana_ingresos", y luego longitud y latitud. Además de encontrar la correlación esperable entre nivel de ingresos de una población y el valor de sus viviendas, nuestro modelo ha encontrado que la ubicación es la clave del valor de la propiedad... y sin saber nada de geografía ni urbanismo.
+La columna "%IncMSE" representa el porcentaje de error promedio, la magnitud en la que el valor predicho por el modelo difiere del valor observado, cuando cada predictor se retira del modelo (es decir, cuanto peor sería la predicción si no se usara). Por eso los números mayores están asociados a los predictores de más peso, que en este caso son LONGITUD, LATITUD, M2DESC, ANTIGUEDAD y DIST_SUBTE. Además de encontrar la correlación esperable entre el valor del m2 y la superficie descubierta de las propiedades, los años de antiguedad y la distancia al subte, nuestro modelo ha encontrado que la ubicación (latitud y longitud) es la clave del valor de la propiedad... y sin saber nada de geografía ni urbanismo.
 
-
-En "predicted" tenemos la mediana del valor de la vivienda predicha para cada distrito:
+En "predicted" tenemos la mediana del valor del m2 predicho para cada departamento:
 
 ```{r}
 head(modelo_RF$predicted)
 ```
 
-
-Aprovechando que dentro del modelo, "y" contiene los valores observados, evaluemos en forma gráfica cuánto se aproximan las predicciones de cada distrito al valor real (el observado) :
+Aprovechando que dentro del modelo, "y" contiene los valores observados, evaluemos en forma gráfica cuánto se aproximan las predicciones de cada departamento al valor real (el observado):
 
 ```{r}
 ggplot() +
@@ -331,10 +372,8 @@ En un gráfico:
 
 ```{r}
 ggplot() +
-    geom_point(aes(x = predicciones_test, y = testeo$mediana_valor_vivienda), alpha = 0.3) 
+    geom_point(aes(x = predicciones_test, y = testeo$U_S_M2), alpha = 0.3) 
 ```
-
-Luce incluso mejor que el ajuste con los datos conocidos.
 
 ### Comparando performance
 
@@ -356,9 +395,8 @@ Eso significa que la diferencia promedio entre valor esperado y valor hallado pa
 
 Y en comparación, ¿qué tan bueno resultó el modelo cuando se aplicó a datos que no conocía?
 
-
 ```{r}
-RMSE_test <- sqrt(mean((predicciones_test - testeo$mediana_valor_vivienda)^2))
+RMSE_test <- sqrt(mean((predicciones_test - testeo$U_S_M2)^2))
 
 RMSE_test
 ```
@@ -375,7 +413,7 @@ ggplot() +
                color = "salmon",
                alpha = .5,
                size = .5) +
-    geom_point(aes(x = 1:nrow(testeo), y = testeo$mediana_valor_vivienda), 
+    geom_point(aes(x = 1:nrow(testeo), y = testeo$U_S_M2), 
                color = "lightblue",
                alpha = .5,
                size = .5) +
